More minor alignment fixes.

--- a/client/src/styles/pages/ViewTenantsRentRoll.scss
+++ b/client/src/styles/pages/ViewTenantsRentRoll.scss
@@ -16,6 +16,7 @@
   {
     display: flex;
     flex-direction: column;
+    padding-left: 15px;
   }
 
   .use-market-rent-selector
